src/styles/toolboxes.scss
@import "variables.scss";
@import "mixins.scss";
@import "icons.scss";
@import "animation.scss";
@import "layouts.scss";

h1, h2 {
    font-family: $font-family-base;
    color: $color-base;
    display: block;
    margin: 0;
    padding-left: 5px;
    cursor: default;
}

h1 {
    font-size: 1.2em;
}

h2 {
    font-size: 1em;
}

.toolbox {
    position: fixed;
    display: block;
    padding: 7px;
    z-index: $z-index-base;
    @include surface();

    &.toolbox-position-left {
        top: 20px;
        left: 20px;
    }

    &.toolbox-position-left-bottom {
        bottom: 20px;
        left: 20px;
    }

    &.toolbox-position-left-offset {
        top: 20px;
        left: 150px;
        min-width: 320px;
    }

    .toolbox-button {
        color: $icon-base-color;
        line-height: $toolbox-button-size;
        min-width: $toolbox-button-size;
        height: $toolbox-button-size;
        display: inline-block;
        padding: 0;
        box-sizing: border-box;
        border: none;
        background-color: transparent;

        text-decoration: none;
        text-align: center;
        position: relative;
        cursor: pointer;
        @include no-select();
        @include no-drag();

        &.toolbox-button-is-active {
            position: relative;

            &:before {
                @include fit();
                position: absolute;
                background-color: $toolbox-button-active-bg;
                border: 1px solid $toolbox-button-active-border;
                border-radius: $toolbox-border-radius - 5px;
                content: '';
            }
        }

        &.pull-down {
            margin-top: auto;
        }

        a {
            display: inline-block;
            height: $toolbox-button-size;
            min-width: $toolbox-button-size;
            line-height: $toolbox-button-size;
            background-size: cover;
            outline: none;
            color: $color-base;
            text-decoration: none;
            width: 100%;
            @include tabable();
        }
    }

    .toolbox-button-group {
        display: flex;
        padding: 0;
        margin: 0;
    }

    .toolbox-button-group-vertical {
        display: flex;
        flex-direction: column;

        .toolbox-button-is-active:before {
            position: absolute;
            left: -7px;
            content: '';
            width: 4px;
            background: $tab-selected-color;
            top: 0;
            bottom: 0;
            border: none;
        }
    }

    .toolbox-splitter {
        height: 1px;
        border: none;
        border-bottom: 1px solid lightgray;
    }

    &.toolbox-resizable {
        resize: horizontal;
    }

    .clickable {
        outline: 1px dashed $button-border-color;
        cursor: pointer;
        padding: 10px;
    }

    &::after {
        clear: both;
        content: '';
        display: block;
    }

    .resize-handle {
        background: transparent;
        position: absolute;
        z-index: $z-index-base + 1;

        &.resize-handle-right {
            cursor: e-resize;
            width: 5px;
            right: 0;
            top: 0;
            bottom: 0;
        }

        &.resize-handle-left {
            cursor: w-resize;
            width: 5px;
            left: 0;
            top: 0;
            bottom: 0;
        }

        &.resize-handle-top {
            cursor: n-resize;
            height: 5px;
            left: 0;
            right: 0;
            top: 0;
        }

        &.resize-handle-bottom {
            cursor: s-resize;
            height: 5px;
            left: 0;
            right: 0;
            bottom: 0;
        }
    }

    &.resize-suspended {
        .resize-handle {
            pointer-events: none;
        }
    }

    &.resized-vertically {
        .resizable-content {
            height: 100%;
        }
    }
}

.editor {
    padding: 10px;
}

.no-pointer-events {
    pointer-events: none;
}

.photo {
    @include fit;
    background-size: cover;
}

